--- a/frontend/src/components/MoleculeGrid.css
+++ b/frontend/src/components/MoleculeGrid.css
@@ -70,7 +70,7 @@
 
 .molecule-image {
   height: 160px;
-  background-color: #fafafa;
+  background-color: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
